--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,8 @@ name: Repo Sync
 
 on:
   schedule: 
-  - cron: "*/15 * * * *" # every 15 minutes. set to whatever interval you like
+  - cron: "*/5 * * * *" # every 15 minutes. set to whatever interval you like
+  workflow_dispatch:
 
 jobs:
   repo-sync:
