--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,8 @@ name: Repo Sync
 
 on:
   schedule: 
-  - cron: "*/15 * * * *" # every 15 minutes. set to whatever interval you like
+  - cron: '0 0 * * *'  # Runs at midnight every day
+  workflow_dispatch:
 
 jobs:
   repo-sync:
@@ -10,16 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with :
+        ref: repo-sync
     - uses: repo-sync/github-sync@v2
-      name: Sync repo to branch
+      name: Sync internal code repo to main branch 
       with:
         source_repo: ${{ secrets.SOURCE_REPO }}
         source_branch: main
-        destination_branch: ${{ secrets.INTERMEDIATE_BRANCH }}
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-    - uses: repo-sync/pull-request@v2
-      name: Create pull request
-      with:
-        source_branch: ${{ secrets.INTERMEDIATE_BRANCH }}
         destination_branch: main
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.WORKFLOW_TOKEN }}
+
