--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -10,11 +10,16 @@ jobs:
     name: Repo Sync
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with :
+    - name: Checkout public repo code
+      uses: actions/checkout@v3
+      with:
         ref: repo-sync
-    - uses: repo-sync/github-sync@v2
-      name: Sync internal code repo to main branch 
+    - name: Set up Git configuration
+      run: |
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+    - name: Sync internal code repo to main branch 
+      uses: repo-sync/github-sync@v2
       with:
         source_repo: ${{ secrets.SOURCE_REPO }}
         source_branch: main
