--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,8 +2,7 @@ name: Repo Sync
 
 on:
   schedule: 
-  - cron: '0 0 * * *'  # Runs at midnight every day
-  workflow_dispatch:
+  - cron: '1/1 * * * *'  # Runs at midnight every day
 
 jobs:
   repo-sync:
