--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Repo Sync
 
 on:
   schedule: 
-  - cron: '1/1 * * * *'  # Runs at midnight every day
+  - cron: '15 * * * *'  
 
 jobs:
   repo-sync:
